# ciceron

./: .gitignore  README.md  pyproject.toml  setup.py
examples/: QAOA.ipynb
images/: Imagenes.pptx
src/qaoa/: __init__.py  experiments.py  mympi.py  optimization.py  p_layers.py  p_layers_cython.py  problems.py  qsim.py  qsim_cython.pyx
tests/: __init__.py  common.py  test_pauli.py
tests/cython/: test_apply_op.py  test_apply_sum_op.py  test_pauli.py
